--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-google-signin/google-signin": "^13.2.0",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.40",
     "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
@@ -33,6 +35,8 @@
     "expo-media-library": "^17.0.6",
     "expo-random": "^14.0.1",
     "expo-router": "~4.0.19",
+    "expo-speech": "~13.0.1",
+    "expo-speech-recognition": "^1.1.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
